--- a/LFE_Measurements/nbproject/project.properties
+++ b/LFE_Measurements/nbproject/project.properties
@@ -48,10 +48,10 @@ javac.classpath=\
     ${file.reference.JTransforms-3.1-javadoc.jar}:\
     ${file.reference.JTransforms-3.1-with-dependencies.jar}:\
     ${file.reference.commons-math3-3.6.1.jar}:\
-    ${file.reference.ij.jar}:\
     ${file.reference.jfreechart-1.5.0-javadoc.jar}:\
     ${file.reference.jfreechart-1.5.0.jar}:\
-    ${file.reference.w3c-dom.jar}
+    ${file.reference.w3c-dom.jar}:\
+    ${file.reference.ij.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -98,7 +98,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Xms64m -Xmx10000m
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
